# camerpi.py

./: .gitignore  README.md  pyproject.toml
src/astro/camerpi/: camera.py  camerpi  camerpi.py
